--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "kydeps"]
 	path = kydeps
 	url = https://github.com/kyotov/kydep-definitions.git
+[submodule "mode-2/kydeps"]
+	path = mode-2/kydeps
+	url = https://github.com/kyotov/kydep-definitions.git
+	branch = main
