--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,27 +1,32 @@
 cmake_minimum_required(VERSION 3.20)
 project(external_package_experiment)
 
-# add_subdirectory(mode-1/kydeps)
-# add_subdirectory(mode-2/kydeps)
-include(FetchContent)
-FetchContent_Declare(kydeps
-    GIT_REPOSITORY https://github.com/kyotov/kydep-definitions.git
-    GIT_TAG v2
-)
-FetchContent_MakeAvailable(kydeps)
+add_subdirectory(mode-1/kydeps)
 
 find_package(gflags REQUIRED CONFIG)
 find_package(glog REQUIRED CONFIG)
 find_package(GTest REQUIRED CONFIG)
 
 add_executable(tests test.cc)
-target_link_libraries(tests
+target_link_libraries(
+    tests
     PRIVATE gflags
     PRIVATE glog::glog
     PRIVATE GTest::gtest
-    PRIVATE GTest::gtest_main
-)
+    PRIVATE GTest::gtest_main)
 
 include(CTest)
 include(GoogleTest)
 gtest_discover_tests(tests)
+
+# cmake-format: off
+# foreach(kydep ${KYDEPS})
+#     set(archive "${kydep}-${${kydep}_HASH}.zip")
+#     file(ARCHIVE_CREATE #
+#          OUTPUT "${archive}" #
+#          PATHS "${${kydep}_INSTALL_DIR}" #
+#     )
+#     file(SHA256 "${archive}" hash)
+#     message(STATUS "created package[${archive}]=${hash}")
+# endforeach()
+# cmake-format: on
