add local cache

--- a/mode-1a/CMakeLists.txt
+++ b/mode-1a/CMakeLists.txt
@@ -1,25 +1,23 @@
 cmake_minimum_required(VERSION 3.20)
 project(external_package_experiment)
 
-# add_subdirectory(mode-3/kydeps)
-include(FetchContent)
-FetchContent_Declare(kydeps
-    GIT_REPOSITORY https://github.com/kyotov/kydep-definitions.git
-    GIT_TAG v2.1
-)
-FetchContent_MakeAvailable(kydeps)
+set(KYDEPS_CACHE_DIR "${CMAKE_SOURCE_DIR}/mode-1a/cache")
+# set(KYDEPS_CACHE_DIR "$ENV{HOME}/work/.kydeps_cache")
+set(KYDEPS_CACHE_LOOKUP ON)
+set(KYDEPS_CACHE_UPDATE ON)
 
+add_subdirectory(kydeps)
 find_package(gflags REQUIRED CONFIG)
 find_package(glog REQUIRED CONFIG)
 find_package(GTest REQUIRED CONFIG)
 
-add_executable(tests test.cc)
-target_link_libraries(
-    tests
+add_executable(tests ../test.cc)
+target_link_libraries(tests
     PRIVATE gflags
     PRIVATE glog::glog
     PRIVATE GTest::gtest
-    PRIVATE GTest::gtest_main)
+    PRIVATE GTest::gtest_main
+)
 
 include(CTest)
 include(GoogleTest)
