--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -14,7 +14,7 @@ jobs:
       matrix:
         # os: [ ubuntu-latest, windows-latest, macos-latest ]
         os: [ ubuntu-latest ]
-        mode: [ 1, 2, 3 ]
+        mode: [ 1, 1a, 2, 3 ]
 
     runs-on: ${{ matrix.os }}
     timeout-minutes: 10
