--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Configure
         shell: bash
         working-directory: ${{github.workspace}}/build
-        run: cmake $GITHUB_WORKSPACE/mode-${{ matrix.mode }} -DCMAKE_BUILD_TYPE=$BUILD_TYPE
+        run: cmake --log-level VERBOSE $GITHUB_WORKSPACE/mode-${{ matrix.mode }} -DCMAKE_BUILD_TYPE=$BUILD_TYPE
 
       - name: Build
         working-directory: ${{github.workspace}}/build
