--- a/mode-1b/kydeps/CMakeLists.txt
+++ b/mode-1b/kydeps/CMakeLists.txt
@@ -17,6 +17,8 @@ endif()
 # ===== [END] KyDeps CMakeLists.txt preamble ===================================
 # ==============================================================================
 
+include(cache.cmake)
+
 KyDep(gflags
     GIT_REPOSITORY https://github.com/gflags/gflags.git
     GIT_TAG f8a0efe03aa69b3336d8e228b37d4ccb17324b88 # v2.2.0
