--- a/mode-1/kydeps/CMakeLists.txt
+++ b/mode-1/kydeps/CMakeLists.txt
@@ -17,6 +17,8 @@ endif()
 # ===== [END] KyDeps CMakeLists.txt preamble ===================================
 # ==============================================================================
 
+include(cache.cmake)
+
 KyDep(gflags
     GIT_REPOSITORY https://github.com/gflags/gflags.git
     GIT_TAG f8a0efe03aa69b3336d8e228b37d4ccb17324b88 # v2.2.0
@@ -25,7 +27,7 @@ KyDep(gflags
     -DREGISTER_INSTALL_PREFIX=FALSE
     -DGFLAGS_BUILD_STATIC_LIBS=TRUE
     -DGFLAGS_BUILD_SHARED_LIBS=FALSE
-    -DGFLAGS_BUILD_TESTING=FALSE    
+    -DGFLAGS_BUILD_TESTING=${KYDEPS_BUILD_TESTS}    
 )
 
 KyDep(glog
@@ -33,7 +35,7 @@ KyDep(glog
     GIT_TAG 96a2f23dca4cc7180821ca5f32e526314395d26a # v0.4.0
 
     CMAKE_ARGS
-    -DBUILD_TESTING=FALSE
+    -DBUILD_TESTING=${KYDEPS_BUILD_TESTS}
 
     ${gflags_DEPENDENCY}
 )
@@ -42,3 +44,10 @@ KyDep(GTest
     GIT_REPOSITORY https://github.com/google/googletest.git
     GIT_TAG e2239ee6043f73722e7aa812a459f54a28552929 # 1.11.0
 )
+
+KyDep(fmt
+    GIT_REPOSITORY https://github.com/fmtlib/fmt.git
+    GIT_TAG b6f4ceaed0a0a24ccf575fab6c56dd50ccf6f1a9 # 8.1.1
+
+    CMAKE_ARGS
+    -DFMT_TEST=${KYDEPS_BUILD_TESTS})
