--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,6 +47,7 @@ jobs:
       - build-one:
           source-dir: <<parameters.source-dir>>
           binary-dir: <<parameters.binary-dir>>
+          extra-parameters: <<parameters.extra-parameters>>
 
   build-and-persist:
     executor: kydeps-executor
@@ -96,8 +97,15 @@ workflows:
     jobs:
       - hold:
           type: approval
+      # - build-simple:
+      #     source-dir: ~/src
+      #     extra-parameters: "-D KYDEPS_TARGETS=all"
+      #     requires:
+      #       - hold
       - build-simple:
-          source-dir: ~/src
-          extra-parameters: "-D KYDEPS_TARGETS=all"
-          requires:
+          name: gflags
+          source-dir: "~/src/mode-1"
+          extra-parameters: "-D KYDEPS_BUILD_ONE_ENABLED=ON -D KYDEPS_TARGETS=gflags"
+          requires: 
             - hold
+            
